Tests/Runtime2/Error/InHandler/.build/throworiginal.pr
[
  {
    "name": "ThrowOriginal",
    "description": "Throws an error with message \u0022original error\u0022 and status code 500 (default).",
    "comment": null,
    "steps": [
      {
        "index": 0,
        "text": "throw error \u0022original error\u0022",
        "lineNumber": 2,
        "indent": 0,
        "comment": null,
        "actions": [
          {
            "module": "error",
            "action": "throw",
            "parameters": [
              {
                "name": "Message",
                "value": "original error",
                "type": "string"
              }
            ],
            "return": null,
            "defaults": null
          }
        ],
        "intent": null,
        "onError": null,
        "cache": null,
        "timeout": null,
        "waitForExecution": true
      }
    ],
    "subGoals": [],
    "visibility": 1,
    "path": "/ThrowOriginal.goal",
    "prPath": "/.build/throworiginal.pr",
    "hash": "9dbe60fc7451268112efa128e62230ccb7b045feed3ae32b253cd3de24f820a3",
    "builderVersion": "0.3",
    "isSetup": false,
    "isEvent": false,
    "isSystem": false,
    "isTest": false,
    "inputParameters": null
  }
]